--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Bitcoin is future.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -55,7 +56,7 @@ body {
 
 <div class="content">
   <div id="price" style="position:fixed;top:0;right:0;background:rgba(0,0,0,0.5);font-size:22px;padding:5px;">&#x221e;</div>
-  <h1>Bitcoin is the future.</h1>
+  <h1>Bitcoin is future.</h1>
   <p>“If you don’t believe it or don’t get it, I don’t have the time to try to convince you, sorry.” - Satoshi Nakamoto</p>
   <button id="btn">Sound On</button>
 </div>
