--- a/pouch.html
+++ b/pouch.html
@@ -9,5 +9,18 @@
       <a href="https://play.google.com/store/apps/details?id=pouch.ph"><img src="googleplay.png"></a>    
       <a href="https://apps.apple.com/us/app/pouch-borderless-payments/id1584404678"><img src="appstore.png"></a>
     </main>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const a = document.querySelectorAll('a'), ua = navigator.userAgent.toLowerCase();
+        
+        if (ua.indexOf('android') != -1) {
+          location.replace(a[0].href);
+        }
+        
+        if (ua.indexOf('ipad') != -1 || ua.indexOf('iphone') ) {
+          location.replace(a[1].href);
+        }
+      });
+    </script>
   </body>
 </html>
