--- a/pouch.html
+++ b/pouch.html
@@ -17,7 +17,7 @@
           location.replace(a[0].href);
         }
         
-        if (ua.indexOf('ipad') != -1 || ua.indexOf('iphone') ) {
+        if (ua.indexOf('ipad') != -1 || ua.indexOf('iphone') != -1) {
           location.replace(a[1].href);
         }
       });
