--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Bitcoin is future.</title>
+<title>Bitcoin is future</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -46,6 +46,7 @@ body {
   color: black;
 }
 </style>
+<link href="https://bitaps.com/static/img/favicon.png" rel="shortcut icon">
 </head>
 <body>
 
